# ESP32_Firmware_AAS_Interpreter

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/NFC_Handler/: CMakeLists.txt  NFC_handler.c  NFC_handler.h  NFC_handler_old.cold
components/NFC_Reader/: CMakeLists.txt  NFC_reader.c  NFC_reader.h
components/NFC_Recipes/: CMakeLists.txt  NFC_recipes.c  NFC_recipes.h
components/OPC_Klient/: CMakeLists.txt  OPC_klient.c  OPC_klient.h
components/frozen-eye__esp_telnet/: .component_hash
components/frozen-eye__esp_telnet/include/telnet/: server.h
components/frozen-eye__esp_telnet/src/: server.c
components/open62541lib/: open62541.c
components/open62541lib/include/: open62541.h
components/pn532/: CMakeLists.txt  pn532.c  pn532.h
components/pn532/backup/: pn532-zaloha.cbac
main/: CMakeLists.txt  app.c  idf_component.yml  opcua_esp32.h
